feat: controller for recent, statistics, txs
